# bakopa-vr

./: .coderabbit.yml  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  shell.nix  shell.windows.nix
.cargo/: config.toml
.codex/prompts/: create-spec.md  implement-test.md  kiro-spec-design.md  kiro-spec-impl.md  kiro-spec-init.md  kiro-spec-requirements.md  kiro-spec-status.md  kiro-spec-tasks.md  kiro-steering-custom.md  kiro-steering.md  kiro-validate-design.md  kiro-validate-gap.md  kiro-validate-impl.md  suggest-action.md
.codex/skills/godot-bevy-ecs-boundary/: SKILL.md
.codex/skills/rust-error-handling/: SKILL.md
.codex/skills/sdd-init/: SKILL.md
.codex/skills/sdd-slice-wish/: SKILL.md
.codex/skills/sdd-test-cases/: SKILL.md
.codex/skills/tdd-green/: SKILL.md
.codex/skills/tdd-red/: SKILL.md
.codex/skills/tdd-refactor/: SKILL.md
.codex/skills/tdd-verify/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  format_and_lint.yml
.spec-workflow/: session.json
.spec-workflow/approvals/peer-ping-pong/: approval_1759522277438_7vnl42jkr.json  approval_1759522424446_3zkdh6qbi.json  approval_1759522930595_2hzuzuk9c.json
.spec-workflow/approvals/peer-session-retry-loop/: approval_1759563496978_bdsgs4pn4.json  approval_1759565697721_ybgbw81ap.json
.spec-workflow/approvals/steering/: approval_1759415778461_fn1uozjj9.json  approval_1759519293851_aw54e13zn.json  approval_1759520266017_0o7ioab2y.json  approval_1759520794738_umceexcw6.json  approval_1759521864957_p52f5mgpj.json  approval_1759522015423_h4eeoe08j.json
.spec-workflow/specs/peer-ping-pong/: design.md  requirements.md  tasks.md
.spec-workflow/steering/: product.md  structure.md  tech.md
.takt/: .gitignore  README.md  config.yaml  persona_sessions.json  session-state.json
.takt/pieces/: cc-sdd-impl-codex.yaml
bloom/api/: Cargo.toml
bloom/core/: Cargo.toml
bloom/ws/: Cargo.toml
bloom/ws/src/: core_api.rs  handler.rs  lib.rs  main.rs  mocks.rs  rate_limit.rs  real_core.rs  server.rs  sinks.rs
bloom/ws/tests/: abnormal.rs  bin_start.rs  common.rs  core_api_contract.rs  duplicate_connection.rs  handshake_logging.rs  logging_common.rs  peer_connected.rs  ping_pong.rs  rate_limit.rs  real_core_create.rs  real_core_join.rs  real_core_peer_events.rs  real_core_rate_limit.rs  real_core_signaling.rs  routing.rs  routing_logging.rs  webrtc_flow.rs  ws_handshake.rs
client/core/: Cargo.toml  build.rs
client/core/src/: lib.rs
client/core/src/adapter/: godot.rs  ports.rs  render.rs  tests.rs  xr.rs
client/core/src/core/: bridge.rs  ecs.rs  errors.rs  mod.rs  ports.rs  tests.rs  xr.rs
client/domain/: Cargo.toml
client/godot/: client_core.gdextension  client_core.gdextension.uid  icon.svg.import  node.tscn  openxr_action_map.tres  project.godot
client/godot-adapter/: Cargo.toml  build.rs
client/godot-adapter/src/: godot.rs  lib.rs  ports.rs  render.rs  tests.rs  xr.rs
docs/: architecture.md  product.md
docs/adr/: 2025-10-30_VibeCodingを辞めて、VibeCoachingにする.md
docs/features/: 2025-10-30_syncer-p2p-bootstrap.md  2025-10-30_workspace-bootstrap.md  2025-10-31_syncer-osrng-to-rng.md
docs/protocol/: ping-pong.md
docs/specs/: 20251125-bloom-signaling.md  20251201-close-frame-disconnect.md  20251201-participant-id-override.md  20251201-ws-handshake-path-upgrade.md  20251203-syncer-minimal-p2p.md  20251218-sidecar-minimal-pose-bridge.md
docs/steering/: product.md  structure.md  tech.md
nix/: dev-shells.nix
rust/crates/shared/: Cargo.toml
rust/crates/shared/src/: config.rs  keypair.rs  lib.rs  multiaddr.rs  pingpong.rs
rust/crates/shared/tests/: pingpong_tests.rs
rust/crates/sidecar/: Cargo.toml
rust/crates/sidecar/src/: error.rs  lib.rs  session.rs
rust/crates/sidecar/tests/: session_tests.rs
rust/xtask/: Cargo.toml
scripts/: build-client-core-linux.sh  build-client-core-macos.sh  build-client-core-windows.sh  check_godot_client_startup.sh  check_godot_headless_startup.sh  smoke-pose-sync-regression.sh  verify-client-pose-sync.sh
scripts/tests/: test_check_godot_headless_startup.sh
sidecar/: Cargo.toml
sidecar/src/: app.rs  auth.rs  bloom_client.rs  config.rs  lib.rs  test_support.rs
sidecar/tests/: auth.rs  binary.rs  config.rs  disconnect.rs  e2e_webrtc.rs  error.rs  http_paths.rs  join.rs  logging.rs  nfr.rs  pose.rs  smoke.rs
sidecar/tests/support/: bloom.rs  mod.rs
syncer/: Cargo.toml
syncer/src/: config.rs  lib.rs  messages.rs  participant_table.rs  rate_limiter.rs  router.rs  signaling_adapter.rs  transport_inbox.rs  webrtc_transport.rs
syncer/src/messages/: chat.rs  control.rs  envelope.rs  error.rs  mod.rs  pose.rs  signaling.rs  sync_message.rs
syncer/src/p2p/: channel.rs  mod.rs  node.rs
syncer/src/webrtc_transport/: mock_bus.rs  signaling_hub.rs  test_helpers.rs
syncer/tests/: adapter_closer_invoked_on_reoffer.rs  build_core_without_webrtc.rs  config_ice_defaults.rs  facade_api_shape.rs  facade_join_pose.rs  facade_min_e2e.rs  facade_multi_events.rs  facade_rate_limit_single_session.rs  facade_rate_limit_stream_kind.rs  facade_rate_limit_window_reset.rs  facade_tracing_context.rs  ipc_config_propagates_auth.rs  messages_chat_json.rs  messages_control_json.rs  messages_envelope.rs  messages_pose_json.rs  messages_signaling_ice.rs  messages_signaling_sdp.rs  outbound_to_transport.rs  p2p_smoke.rs  participant_table_join.rs  participant_table_leave.rs  participant_table_pending_event.rs  participant_table_rejoin.rs  participant_table_snapshot.rs  peer_left_dedup.rs  peer_left_track_stop.rs  rate_limiter_independent_windows.rs  rate_limiter_mixed_streams.rs  rate_limiter_multiple_sessions.rs  rate_limiter_overflow_persistence.rs  rate_limiter_single_session.rs  rate_limiter_stream_kind_reflects_latest.rs  rate_limiter_window_reset.rs  router_outbound_tracing.rs  router_pose_routing.rs  signaling_adapter_inbound.rs  signaling_adapter_invalid.rs  signaling_adapter_outbound.rs  signaling_adapter_reoffer.rs  (+32 more)
syncer/tests/common/: bus_transport.rs  fake_clock.rs  mod.rs  timeouts.rs
(+88 files in other folders)
