[package]
name = "sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
axum = { version = "0.7", features = ["ws", "tokio"] }
tracing = "0.1"
subtle = "2"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "sync", "test-util"] }
tokio-tungstenite = "0.23"
tungstenite = "0.23"
http = "1"
futures-util = "0.3"
serde_json = "1"
