[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws", "macros"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
subtle = "2.6"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "test-util"] }
url = "2.5"
