[package]
name = "syncer"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { version = "0.9.2", features = ["std"] }
anyhow = "1.0"
clap = { version = "4.5.51", features = ["derive"] }
clap_derive = "4.0.0-rc.1"
iroh = "0.94.0"
tokio = "1.48.0"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
