[package]
name = "syncer"
version = "0.1.0"
edition = "2021"

[dependencies]
bloom-core = { path = "../bloom/core" }
bloom-api = { path = "../bloom/api" }
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
bytes = "1"
webrtc = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
