[package]
name = "bloom-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
bloom-api = { path = "../api" }
bloom-core = { path = "../core" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
uuid = "1.18.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
