[package]
name = "bloom-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
bloom-api = { path = "../api" }
bloom-core = { path = "../core" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time", "signal"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
anyhow = "1"
uuid = "1.18.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
uuid = { version = "1.18.1", features = ["v4"] }
