[package]
name = "client-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
demo-motion = []

[lib]
crate-type = ["cdylib"]
name = "client_core"

[dependencies]
bevy_ecs = "0.14.2"
godot = { version = "0.4.5", default-features = false, features = ["api-4-5"] }
thiserror = "1.0.69"
