[package]
name = "client-godot-adapter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
demo-motion = ["client-domain/demo-motion"]

[lib]
crate-type = ["cdylib"]
name = "client_core"

[dependencies]
client-domain = { path = "../domain" }
godot = { version = "0.4.5", default-features = false, features = ["api-4-5"] }
tracing = "0.1.41"
thiserror = "2.0.18"
