[package]
name = "sidecar"
version = "0.1.0"
edition = "2024"

[lib]
name = "sidecar"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
once_cell = "1.19"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
parking_lot = "0.12"
thiserror = "1.0"
tokio = { version = "1.39", default-features = false, features = ["rt", "sync", "time"] }
rmp-serde = "1.1"

[dev-dependencies]
tokio = { version = "1.39", default-features = false, features = ["rt", "macros", "sync", "time"] }
